--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "ostream": "cpp",
-        "functional": "cpp"
-    }
+        "functional": "cpp",
+        "iostream": "cpp",
+        "random": "cpp"
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
