--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,9 @@
         "regex": "cpp",
         "valarray": "cpp",
         "*.tcc": "cpp",
-        "cmath": "cpp"
+        "cmath": "cpp",
+        "bitset": "cpp",
+        "utility": "cpp"
     },
     "C_Cpp.errorSquiggles": "enabled"
 }
